<resources>
    <string name="app_name">Laundry</string>
    <string name="idpel">ID Pelanggan</string>
    <string name="bthubungi">Hubungi</string>
    <string name="btlihat">Lihat</string>
    <string name="idpegawai">Pegawai</string>
    <string name="judulpel">Tambah Pelanggan</string>
    <string name="judulpeg">Tambah Pegawai</string>
    <string name="nama">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="nohp">Nomor HP</string>
    <string name="cabang">Nama Cabang</string>
    <string name="btsimpan">Simpan</string>
    <string name="daftar">Terdaftar</string>
    <string name="judullayan">Tambah Layanan</string>
    <string name="idlayan">ID Layanan</string>
    <string name="nama_layan">Nama Layanan</string>
    <string name="harga_layan">Harga</string>
    <string name="validasi_nama_Pelanggan">Nama Tidak Boleh kosong</string>
    <string name="validasi_alamat_pelanggan">Alamat Tidak Boleh Kosong</string>
    <string name="validasi_nohp_pelanggan">Nomor HP Tidak Boleh Kosong</string>
    <string name="validasi_cabang_pelanggan">Cabang Tidak Boleh Kosong</string>
    <string name="sukses_simpan_pelanggan">Data Berhasil Disimpan</string>
    <string name="gagal_simpan_pelanggan">Data Gagal Disimpan</string>
    <string name="validasi_nama_pegawai">Nama Tidak Boleh Kosong</string>
    <string name="validasi_alamat_pegawai">Alamat Tidak Boleh Kosong</string>
    <string name="validasi_daftar_pegawai">Terdaftar Tidak Boleh Kosong</string>
    <string name="validasi_cabang_pegawai">Cabang Tidak Boleh Kosong</string>
    <string name="validasi_nohp_pegawai">Nomor Hp Tidak Boleh Kosong</string>
    <string name="sukses_simpan_pegawai">Data Berhasil Disimpan</string>
    <string name="gagal_simpan_pegawai">Data Gagal Disimpan</string>
    <string name="validasi_nama_layanan">Nama Layanan Tidak Boleh Kosong</string>
    <string name="validasi_harga_layanan">Harga Layanan Tidak Boleh Kosong</string>
    <string name="validasi_cabang_layanan">Cabang Layanan Tidak Boleh Kosong</string>
    <string name="judultambahan">Tambahan</string>
    <string name="namatambahan">Nama Tambahan</string>
    <string name="idtambahan">ID Tambahan</string>
    <string name="validasi_nama_tambahan">Nama Tambahan Tidak Boleh Kosong</string>
    <string name="validasi_harga_tambahan">Harga Tambahan Tidak Boleh Kosong</string>
    <string name="validasi_cabang_tambahan">Nama Cabang Tambahan Tidak Boleh Kosong</string>
    <string name="editpegawai">Edit Pegawai</string>
    <string name="pagi">Selamat Pagi</string>
    <string name="siang">Selamat Siang</string>
    <string name="malam">Selamat Malam</string>
    <string name="judulcabang">Cabang</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="kontakcabang">Nomor telepon cabang</string>
    <string name="alamatcabang">Alamat Cabang</string>
</resources>