<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tambahan.tambah_tambahan">

    <TextView
        android:id="@+id/judultambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judultambahan"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvnamatambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/tvnamatambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/namatambahan"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etnamatambah"
        app:layout_constraintTop_toBottomOf="@id/judultambah"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etnamatambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_layan"
        android:background="@drawable/border_et"
        android:textSize="21dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvnamatambah"
        app:layout_constraintBottom_toTopOf="@id/tvhargatambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvhargatambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harga_layan"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ethargatambah"
        app:layout_constraintTop_toBottomOf="@id/etnamatambah"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/ethargatambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_et"
        android:hint="@string/harga_layan"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:textSize="21dp"
        app:layout_constraintBottom_toTopOf="@id/tvcabangtambah"
        app:layout_constraintTop_toBottomOf="@id/tvhargatambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvcabangtambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cabang"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etcabangtambah"
        app:layout_constraintTop_toBottomOf="@id/ethargatambah"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etcabangtambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cabang"
        android:textSize="21dp"
        android:textColor="@color/black"
        android:background="@drawable/border_et"
        app:layout_constraintBottom_toTopOf="@id/btsimpantambah"
        app:layout_constraintTop_toBottomOf="@id/tvcabangtambah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btsimpantambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etcabangtambah"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000957"
        android:textColor="@color/white"
        android:text="@string/btsimpan"
        android:textSize="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>