<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layanan.tambah_layanan">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judullayan"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/tvnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_layan"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/judul"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_layan"
        android:background="@drawable/border_et"
        android:textSize="21dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvnama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvharga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harga_layan"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etnama"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etharga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_et"
        android:hint="@string/harga_layan"
        android:textColor="@color/black"
        android:textSize="21dp"
        app:layout_constraintTop_toBottomOf="@id/tvharga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cabang"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etharga"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cabang"
        android:textSize="21dp"
        android:textColor="@color/black"
        android:background="@drawable/border_et"
        app:layout_constraintTop_toBottomOf="@id/tvcabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etcabang"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btsimpan"
        android:textSize="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>