<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cabang.tambah_cabang">

    <TextView
        android:id="@+id/judulcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judulcabang"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvnamacabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/tvnamacabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_cabang"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etnamacabang"
        app:layout_constraintTop_toBottomOf="@id/judulcabang"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etnamacabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_cabang"
        android:background="@drawable/border_et"
        android:textSize="21dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvnamacabang"
        app:layout_constraintBottom_toTopOf="@id/tvkontakcabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvkontakcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kontakcabang"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etkontakcabang"
        app:layout_constraintTop_toBottomOf="@id/etnamacabang"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etkontakcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_et"
        android:hint="@string/kontakcabang"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:maxLength="14"
        android:textSize="21dp"
        app:layout_constraintBottom_toTopOf="@id/tvalamatcabang"
        app:layout_constraintTop_toBottomOf="@id/tvkontakcabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvalamatcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamatcabang"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etalamatcabang"
        app:layout_constraintTop_toBottomOf="@id/etkontakcabang"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/etalamatcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alamatcabang"
        android:textSize="21dp"
        android:textColor="@color/black"
        android:background="@drawable/border_et"
        app:layout_constraintBottom_toTopOf="@id/btsimpancabang"
        app:layout_constraintTop_toBottomOf="@id/tvalamatcabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btsimpancabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etalamatcabang"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000957"
        android:textColor="@color/white"
        android:text="@string/btsimpan"
        android:textSize="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>