<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cvpelanggan"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvidpel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000957"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/idpel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idpel"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvnamapel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Pelanggan"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/cvidpel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/tvalamatpel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alamat"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvnamapel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/tvnohppel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No HP"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvalamatpel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/tvcabangpel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Cabang"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tvnohppel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <Button
            android:id="@+id/bthubungipel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000957"
            android:textColor="@color/white"
            android:text="@string/bthubungi"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvcabangpel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btlihatpel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btlihat"
            android:backgroundTint="#000957"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvcabangpel"
            app:layout_constraintStart_toEndOf="@id/bthubungipel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>